@@ -10529,3 +10529,6 @@ v0.92.0.11:
   - Bump version for release.
 0.102.0.1:
   - Add new shear-to-remove-saddle mobs to entity list, courtesy of Warrior with PR #8018.
+  - Fix admin permissions on LuckPerms-using servers where OPs do not receieve towny.admin.
+    - OPs will now be given the towny.admin permission node by default.
+    - Closes #8017.
